# python-wrap-logger

./: pyproject.toml
.github/workflows/: build.yml  python-app.yml
tests/: log_test.py  wrap_test.py
wrap_logger/: __init__.py  __wrap_logger.py
