[project]
name = "wrap-logger"
version = "0.2.1"
description = "A library to wrap around objects and modules in Python and log property accesses and calls"
authors = [
    {name = "Maddy Guthridge", email = "hello@maddyguthridge.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "log",
    "logger",
    "wrapper",
    "wrap",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
"Online Documentation" = "https://github.com/MaddyGuthridge/python-wrap-logger"
"Bug Tracker" = "https://github.com/MaddyGuthridge/python-wrap-logger/issues"


[dependency-groups]
dev = ["pytest>=7.4,<9.0", "coverage>=7.3.0", "flake8>=6.1,<8.0", "mypy>=1.5.1", "jestspectation>=1.2.0"]
